--- a/css/mmm-smarttouch.css
+++ b/css/mmm-smarttouch.css
@@ -1,7 +1,7 @@
 .st-container {
   width: 100%;
   display: flex;
-  left: 50%;
+  left: calc(50% + 40px);
   top: 50%;
   align-items: center;
   justify-content: center;
